@@ -28,6 +28,7 @@ import org.powermock.modules.junit4.PowerMockRunner;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 /**
  * Verifies {@link AclScenarioFilterWidget}.
@@ -60,7 +61,7 @@ public class AclScenarioFilterWidgetTest {
     @Test
     public void testOnSave() {
         FilterSaveEvent filterSaveEvent = createMock(FilterSaveEvent.class);
-        expect(filterSaveEvent.getSelectedItemsIds()).andReturn(Collections.singleton(SCENARIO_NAME)).once();
+        expect(filterSaveEvent.getSelectedItemsIds()).andReturn(Set.of(SCENARIO_NAME)).once();
         replay(filterSaveEvent);
         scenarioFilterWidget.onSave(filterSaveEvent);
         verify(filterSaveEvent);
