@@ -25,7 +25,6 @@ import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -69,7 +68,7 @@ public class UdmUsableDetailsByCountryReportWidgetTest {
 
     @Test
     public void testGetReportFilter() {
-        Set<Integer> periods = Collections.singleton(202212);
+        Set<Integer> periods = Set.of(202212);
         Whitebox.setInternalState(widget, "periods", periods);
         LocalDateWidget dateFromWidget = createMock(LocalDateWidget.class);
         Whitebox.setInternalState(widget, "dateFromWidget", dateFromWidget);
