@@ -43,6 +43,7 @@ import org.powermock.reflect.Whitebox;
 
 import java.time.LocalDate;
 import java.util.Collections;
+import java.util.Set;
 
 /**
  * Verifies {@link NtsScenariosController}.
@@ -160,7 +161,7 @@ public class NtsScenariosControllerTest {
         UsageBatch usageBatch = new UsageBatch();
         usageBatch.setId("batchId");
         usageBatch.setName("BatchName");
-        scenarioUsageFilter.setUsageBatches(Collections.singleton(usageBatch));
+        scenarioUsageFilter.setUsageBatches(Set.of(usageBatch));
         expect(scenarioUsageFilterService.getByScenarioId(SCENARIO_ID)).andReturn(scenarioUsageFilter).once();
         IRightsholderService rightsholderService = createMock(IRightsholderService.class);
         Whitebox.setInternalState(scenariosController, rightsholderService);
